<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/bad_script"
            android:text="@string/safeway"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/shake"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#D4FFFF"
            android:text="@string/lastText"
            android:textColor="#000000"
            android:onClick="stopLocationUpdates"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:backgroundTint="#D4FFFF"
                android:text="@string/add_number"
                android:textColor="#000000"
                android:onClick="goToAddNumberActivity"/>

            <Button
                android:id="@+id/editButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:backgroundTint="#D4FFFF"
                android:text="@string/edit_numbers"
                android:textColor="#000000"
                android:onClick="goToEditNumbersActivity"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>